Use softonic modified google pubsub

--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,18 @@
       "email": "info@superbalist.com"
     }
   ],
+  "repositories": [
+    {
+        "type": "git",
+        "url": "https://github.com/softonic/php-pubsub-google-cloud.git"
+    }
+  ],
   "require": {
     "php": ">=5.6.0",
     "illuminate/support": "^5.4",
     "superbalist/php-pubsub": "^1.0|^2.0",
     "superbalist/php-pubsub-redis": "^1.0|^2.0",
-    "superbalist/php-pubsub-google-cloud": "^2.0|^3.0|^4.0",
+    "superbalist/php-pubsub-google-cloud": "dev-softonic",
     "illuminate/console": "^5.4"
   },
   "autoload": {
